assets/sass/_core.scss
/* ... */
#content {
  @media screen and (max-width: $tabwidth) {
    .reg-button {
      position: absolute;
      top: 0;
      left: 0;
      width: 100%;
      text-align: center;
      a {
        display: block;
        text-decoration: none;
        max-width: 100%;
        width: 100%;
        height: 100%;
        text-align: center;
        padding: 14px 10px 10px;
        border-radius: 0;
        background: $color-gold;
        color: #FFF;
        font-size: 18px;
        font-weight: 500;
        line-height: 1.1;
        text-transform: uppercase;
        position: relative;
        &:hover {
          background: $color-green;
        }
      }     
    }
  }
  @media screen and (max-width: $xswidth) {
    .reg-button a {
      width: 100%;
    }
  }
}

#content {
  background: {
    image:url('images/floral.svg');
    position: center;
  }
}

body.popup-open {
  overflow: hidden;
}
#popup-content {
  display: none;
  width: 100%;
  height: 100%;
  padding: 20px;
  position: fixed;
  top: 0;
  left: 0;
  // top: 50%;
  // left: 50%;
  // transform: translateX(-50%) translateY(-50%);
  // min-height: 15em;
  z-index: 99999;
  overflow: auto;
  &.show {
    display: block;
  }
  .popup-content {
    max-width: 850px;
    width: 100%;
    min-height: 15em;
    background: $color-gold;
    box-shadow: 0 4px 14px rgba(0,0,0,0.2);
    position: relative;
    top: 50%;
    left: 50%;
    transform: translateX(-50%) translateY(-50%);
    color: #FFF;
    @include animateThis(1s);
    @include animateEffect('fadeIn');
    .flex-wrap {
      @include flexgroup();
      .text {
        padding: 20px;
        width: 100%;
        @include tab {
          width: 60%;
          padding: 4vw;
        }
      }
      .photo {
        width: 100%;
        @include tab {
          width: 40%;
        }
        figure {
          width: 100%;
          height: 100%;
          margin: 0 0;
          @include backgroundImage(center);
        }
        img {
          width: 100%;
          height: auto;
        }
      }
      &.full {
        .text, .photo {
          width: 100%;
        }
      }
    }
    .title {
      font-family: $font2;
      font-size: 25px;
      line-height: 1.2;
      margin: 0 0;
      text-transform: uppercase;
      letter-spacing: 1px;
    }
    .other-info {
      margin-top: 30px;
      border-left: 1px solid #FFF;
      padding-left: 15px;
      line-height: 1.3;
    }

    &.activity {
      max-width: 900px;
      .title {
        margin: 0 0 20px;
      }
      .middle-content {
        padding: 40px 30px;
      }
      figure, .wp-block-image {
        margin: 0 0 30px;
        img {
          width: 100%;
          height: auto;
        }
      }
      a {
        color: $color-green;
        &:hover {
          color: tint($color-green,20%);
        }
      }
      .wp-block-button__link {
        background-color: #FFF;
        color: $color-green;
        padding: 15px 25px 13px;
        &:hover {
          background: rgba(255,255,255,.75);
        }
      }
      .flex-wrap.full {
        .text {
          padding: 0 0;
        }
      }
      .flex-wrap.half {
        .text {
          @include tab {
            padding: 0 30px 0 0;
          }
        }
      }
    }
  }

  #closeModalBtn {
    display: block;
    width: 25px;
    height: 25px;
    position: absolute;
    top: 10px;
    right: 10px;
    cursor: pointer;
    transform: scale(0.75);
    span {
      overflow: hidden;
      display: block;
      width: 0;
      z-index: -99em;
    }
    &:before, &:after {
      content:"";
      display: block;
      width: 100%;
      height: 2px;
      background: rgba(255,255,255,.5);
      position: absolute;
      top: 12px;
      left: 0;
      transition: all ease .3s;
    }
    &:before {
      transform: rotate(45deg);
    }
    &:after {
      transform: rotate(-45deg);
    }
    &:hover {
      &:before, &:after {
        background: rgba(255,255,255,1);
      }
    }
  }
}

.repeatable-block-page {
  article.page {
    margin-bottom: 0;
    padding-bottom: 20px;
  }
}
body.page-template-page-repeatable-blocks {
  .repeatable-block-page {
    margin: 30px 0;
    width: 100%;
    float: left;
  }
}
.repeatable-content-blocks {
  margin: 0 0;
  width: 100%;
  float: left;
  .content-block {
    margin: 50px 0;
  }
  .textcol, .imagecol {
    width: 100%;
  }
  .textcol {
    background: $color-green;
    color: #FFF;
    padding: 20px;
    @include tab {
      height: 100%;
      &.matchHeight {
        @include flexgroup();
        @include flexbox-justify(center);
        @include flexbox-align-items(center);
        .inside {
          width: 100%;
        }
      }
    }
    a {
      color: #e4d25c;
      text-decoration: underline;
      &:hover {
        color: #fcef9c;
      }
    }
    .rb_title {
      font-family: $font2;
      font-size: 2em;
      font-weight: normal;
      line-height: 1.2;
      margin: 0 0 20px;
      letter-spacing: 1px;
      text-transform: uppercase;
    }
    .rb_buttons {
      margin-top: 30px;
      a {
        display: inline-block;
        text-decoration: none;
        background: $color-tan;
        color: $color-green;
        border-radius: 4px;
        padding: 10px 15px 8px;
        margin-right: 15px;
        font-size: 16px;
        font-weight: 500;
        &:hover {
          background: #FFF;
          box-shadow: 0 3px 10px rgba(0,0,0,0.35);
        }
      }
    }
  }
  .half {
    @include flexgroup();
    .textcol {
      @include tab {
        width: 40%;
      }
    }
    .imagecol {
      @include tab {
        width: 60%;
      }
    }
    &.even {
      @include tab {
        @include flexbox-direction(row-reverse);
      }
    }
  }
  .even {
    .textcol {
      background: shade($color-gold,10%);
    }
  }
  figure {
    margin: 0 0;
    @include backgroundImage(center);
    @include tab {
      height: 100%;
    }
    img {
      width: 100%;
      height: auto;
    }
  }
}
/* ... */

